--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
          <a href="livetv.html" style="text-decoration:none;color: inherit;"><div class="live-tv"> <span>LIVE TV</span> </div></a>
       </div>
       <div class="headerIMG">
-           <img src="/images/Your paragraph text (2).png" width="100%" height="5%" style="opacity: 100%;">
+           <img src="/images/header" width="100%" height="5%" style="opacity: 100%;">
       </div>
     </div>
     <div id="live">
