--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TV Guide Data</title>
+    <title>Phantom TV</title>
     <link rel="stylesheet" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
   <body>
     <div class="top">
       <div class="header">
-         <a href="index.html" style="text-decoration:none;color: inherit;"><div class="home"> <span>HOME</span> </div></a>
-         <a href="livetv.html" style="text-decoration:none;color: inherit;"><div class="live-tv"> <span>LIVE TV</span> </div></a>
+         <img src="/images/android-chrome-192x192.png" width="50" height="50">
+         <a href="https://phantomtv.onrender.com/" style="text-decoration:none;color: inherit;"><div class="home"> <span>HOME</span> </div></a>
+         <a href="highlights.html" style="text-decoration:none;color: inherit;"><div class="live-tv"> <span>HIGHLIGHTS</span> </div></a> 
       </div>
       <div class="headerIMG">
-           <img src="/images/Your paragraph text (2).png" width="100%" height="5%" style="opacity: 100%;">
+           <img src="/images/header.png" width="100%" height="15%" style="opacity: 100%;">
       </div>
     </div>
     <div id="live">
@@ -21,8 +23,8 @@
     
      <h2 style="color: white;font-family: 'Alatsi', sans-serif;font-size: 22px;margin-bottom: 50px;margin-left: 5px;">Live Channels</h2>
      <div class="horizontal-scroll">
-       <button class="LeftScroll" id="LeftScroll" onclick="scrollHorizontally2(1)"><img src="https://o.remove.bg/downloads/73a1adbb-8947-4930-aeb6-ee6a1abe2fc4/arrows-icon-left-arrow-icon-back-icon-pointers-icon-white-black-text-logo-line-material-property-png-clipart-removebg-preview.png" width="25" height="30" style="position: relative;bottom:5px;right: 4px;"></button>
-       <button class="RightScroll" id="RightScroll" onclick="scrollHorizontally2(-1)"><img src="https://o.remove.bg/downloads/6b74b198-4fab-43f1-86b4-89743d4a5f4d/arrow-icon-forward-icon-navigation-icon-png-clipart-thumbnail-removebg-preview.png" width="25" height="30" style="position: relative;bottom:5px;right: 0px;"></button>
+       <button class="LeftScroll" id="LeftScroll" onclick="scrollHorizontally2(1)"><img src="/images/Left-Arrow.png" width="20" height="30" style="position: relative;bottom:5px;right: 4px;"></button>
+       <button class="RightScroll" id="RightScroll" onclick="scrollHorizontally2(-1)"><img src="/images/Right-Arrow.png" width="25" height="30" style="position: relative;bottom:5px;right: 0px;"></button>
        <div class="live-channels-container">    
           <a href='bt-sport1.html'><div id="tnt-sport1" class="channel" >
               <div class='leftSide' style="display:flex;flex-direction: column;margin-right: 5px; " >
@@ -191,9 +193,9 @@
         <a href='skysportsmainevent.html'><div id="skysportsmainevent" class="channel" >
           <div class='leftSide' style="display:flex;flex-direction: column;margin-right: 5px; " >
               <a href='/tv-guide-bt-sport-1/' title='Sky Sports Main Evenet'>
-                <img src='https://o.remove.bg/downloads/e29bb2b4-03a1-4787-a895-d24d80650931/download-removebg-preview.png' style='max-width:60px' loading='lazy' alt='TV Guide BT Sport 1' />
+                <img src='https://e0.365dm.com/tvlogos/channels/1301-Logo.svg?U2t5IFNwb3J0cyBNYWluIEV2ZW50' style='max-width:60px' loading='lazy' alt='TV Guide BT Sport 1' />
               </a>
-              <img src="/images/play-button.png" style="align-self: center;justify-content: center;" width="50" height="40">
+              <img src="/images/play-button.png" style="align-self: center;justify-content: center;" width="50" height="50">
           </div>
           <div class="rightSide">
               <div class="title-row">Sky Sports Main Event</div>
@@ -218,7 +220,7 @@
         <a href='skysportsfootball.html'><div id="skysportsfootball" class="channel" >
           <div class='leftSide' style="display:flex;flex-direction: column;margin-right: 5px; " >
               <a href='/tv-guide-bt-sport-1/' title='Sky Sports Football'>
-                <img src='https://o.remove.bg/downloads/b83e72a2-ba99-494a-8cca-b462a93d84bf/download-removebg-preview.png' style='max-width:60px' loading='lazy' alt='TV Guide BT Sport 1' />
+                <img src='https://e0.365dm.com/tvlogos/channels/3838-Logo.svg?U2t5IFNwb3J0cyBGb290YmFsbA==' style='max-width:60px' loading='lazy' alt='TV Guide BT Sport 1' />
               </a>
               <img src="/images/play-button.png" style="align-self: center;justify-content: center;" width="50" height="50">
           </div>
@@ -245,7 +247,7 @@
         <a href='skysportsnews.html'><div id="skysportsnews" class="channel" >
           <div class='leftSide' style="display:flex;flex-direction: column;margin-right: 5px; " >
               <a href='/tv-guide-bt-sport-1/' title='Sky Sports News'>
-                <img src='https://o.remove.bg/downloads/e8d24cfb-2bf8-4002-870d-a2935966edbd/download-removebg-preview.png' style='max-width:60px' loading='lazy' alt='TV Guide BT Sport 1' />
+                <img src='https://e0.365dm.com/tvlogos/channels/1314-Logo.svg?U2t5IFNwb3J0cyBOZXdz' style='max-width:60px' loading='lazy' alt='TV Guide BT Sport 1' />
               </a>
               <img src="/images/play-button.png" style="align-self: center;justify-content: center;" width="50" height="50">
           </div>
@@ -274,11 +276,9 @@
      <div class="upcoming">
       <h2 style="color: white;font-family: 'Alatsi', sans-serif;font-size: 22px;">Upcoming Premier League Matches</h2>
       <div id="fixtures-container">
-        <button class="LeftScroll" id="LeftScroll" onclick="scrollHorizontally1(1)"><img src="https://o.remove.bg/downloads/73a1adbb-8947-4930-aeb6-ee6a1abe2fc4/arrows-icon-left-arrow-icon-back-icon-pointers-icon-white-black-text-logo-line-material-property-png-clipart-removebg-preview.png" width="25" height="30" style="position: relative;bottom:5px;right: 4px;"></button>
-        <button class="RightScroll" id="RightScroll" onclick="scrollHorizontally1(-1)"><img src="https://o.remove.bg/downloads/6b74b198-4fab-43f1-86b4-89743d4a5f4d/arrow-icon-forward-icon-navigation-icon-png-clipart-thumbnail-removebg-preview.png" width="25" height="30" style="position: relative;bottom:5px;right: 0px;"></button>
       </div>
      </div>
-
+     <script src="index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
      
