--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
          <a href="livetv.html" style="text-decoration:none;color: inherit;"><div class="live-tv"> <span>HIGHLIGHTS</span> </div></a>
       </div>
       <div class="headerIMG">
-           <img src="/images/header.png" width="100%" height="5%" style="opacity: 100%;">
+           <img src="/images/header4.png" width="100%" height="5%" style="opacity: 100%;">
       </div>
     </div>
     <div id="live">
@@ -395,7 +395,7 @@
 }
 
   async function fetchData() {
-    const specificDate = '2023-08-19'; // Change this to the specific date you want
+    const specificDate = '2023-10-19'; // Change this to the specific date you want
     const currentDate = new Date();
     const mdtTimeZone = 'America/Denver';
     const mdtOptions = { timeZone: mdtTimeZone, year: 'numeric', month: '2-digit', day: '2-digit' };
