--- a/public/mediaquery.css
+++ b/public/mediaquery.css
@@ -1,7 +1,7 @@
 
 
 
-@media only screen and (max-device-width: 767px) { 
+@media only screen and (min-width:0px) and (max-device-width: 767px) { 
 
 html{
     height:100%; /* ✔️ Height on the parent will fix this issue. */
