--- a/public/main.css
+++ b/public/main.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Alatsi&display=swap');
 
 @media only screen and (min-width: 600px) {
 body {
