--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
     <div class="top">
       <div class="header">
          <img src="/images/phantomtvlogo.png" width="50" height="50">
-         <a href="phantomtv.onrender.com" style="text-decoration:none;color: inherit;font-size: 19px;"><div class="home"> <bold>HOME</bold> </div></a>
-         <a href="livetv.html" style="text-decoration:none;color: inherit;font-size: 19px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+         <a href="/" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
+         <a href="highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
       </div>
       <div class="headerIMG desktop">
            <img src="/images/header4.png" style="opacity: 100%;" width="100%" height="5%">
