--- a/views/testing.ejs
+++ b/views/testing.ejs
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     Time: <%= JsonData%>
+    <title>Current Program</title>
 </head>
 <body>
+    <h1>Current Program</h1>
     
+    <% if (currentProgram) { %>
+        <h2>Title: <%= currentProgram.title %></h2>
+        <p>Subtitle: <%= currentProgram['sub-title'] %></p>
+        <p>Description: <%= currentProgram.desc %></p>
+        <p>Start UTC: <%= new Date(currentProgram.start_utc * 1000) %></p>
+        <p>Stop UTC: <%= new Date(currentProgram.stop_utc * 1000) %></p>
+    <% } else { %>
+        <p>No program is currently playing.</p>
+    <% } %>
 </body>
 </html>
