--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="theme-color" content="#ffffff">
+    
   </head>
   <body>
     <div class="top">
@@ -19,6 +20,7 @@
          <img src="/images/phantomtvlogo.png" width="50" height="50">
          <a href="/" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
          <a href="highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+         <a href="livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
       </div>
       <div class="headerIMG desktop">
            <img src="/images/header4.png" style="opacity: 100%;" width="100%" height="5%">
@@ -289,6 +291,7 @@
       </div>
      </div>
 
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
      
@@ -600,4 +603,6 @@
 
   </body>
 </html>
+
+
 
