--- a/public/main.css
+++ b/public/main.css
@@ -34,7 +34,7 @@ body::-webkit-scrollbar-thumb:hover {
   align-items: center; 
   width:300px;height:40px;
   margin-left: 5px;
-  margin-bottom: 15px;
+  margin-bottom: 140px;
   /* -webkit-overflow-scrolling: touch; */
 }
 
@@ -55,6 +55,8 @@ body::-webkit-scrollbar-thumb:hover {
     height:40px;
     width:40px;
     align-self:self-start;
+    position: relative;
+    top: 50px;
 }
 
 .RightScroll {
@@ -89,6 +91,8 @@ body::-webkit-scrollbar-thumb:hover {
     /* align-items: center; */
     position: absolute; 
     transition: 0.5s all ease-out;
+    margin-top:90px;
+    /* margin-bottom:120px; */ 
     /* z-index: 1; */
 }
 
@@ -180,6 +184,7 @@ p{
 }
 
 
+
 /* api football style  */
 
 .data-container {
@@ -234,7 +239,7 @@ p{
 }
 
 .upcoming {
-  margin-top: 5.5em;
+  margin-top: 2px;
   margin-left:10px;
 }
 
@@ -302,7 +307,7 @@ p{
   color: white;
   /* font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
   font-size: 22px;
-  margin-bottom: 9vh;
+  /* margin-bottom: 20; */
   margin-left:5px;
  }
 
