--- a/views/aidan.ejs
+++ b/views/aidan.ejs
@@ -18,21 +18,9 @@
     <div class="top">
       <div class="header">
          <img src="/images/phantomtvlogo.png" width="50" height="50">
-         <a href="/tem" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
-         <a href="t/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
-         <a href="t/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
-         <svg width="35" height="35" viewBox="0 0 200 200"  xmlns="http://www.w3.org/2000/svg" style="background:#0D7E80;border-radius:90%;justify-self:center;position:fixed;right:0;margin-right:20px;">
-				  <g id="Page-1" fill="none" fill-rule="evenodd">
-					<g id="Account-Holder" fill="#FCFDFF">
-					  <g id="profile1">
-						<path d="M61 155l7-8h67c6.67 4 10 6.67 10 8 0 2 0-22-4-24s-67-2-78 1c-1.33 5.33-2 13-2 23z" id="mustache"/>
-						<path d="M94 77c-8.67 30-24.67 45-48 45-31 0-34-30-34-46 0-10.67 10-17 30-19h110c24.67 0 38 6 40 18 0 30-11.67 45.67-35 47-38 2-45-44-46-45-.67-.67-6.33-.67-17 0zM81 63c5.33 4.67 8 7.67 8 9h26c0-2 2.67-5 8-9H81z" id="sunglasses"/>
-						<path d="M111 35c1 5 4 13 4 14s45-13 70-2c-7-10-26-13-32-13-4 0-16 1-36 3-3.33-2-5.33-2.67-6-2z" id="right-brow"/>
-						<path d="M89 38h-7c-12.67-6.67-24.33-10-35-10-10.67 0-20.67 3-30 9 9.33-1.33 16.33-1.67 21-1 9 1 31 7 44 15 3.33-1.33 5.67-5.67 7-13z" id="left-brow"/>
-					  </g>
-					</g>
-				  </g>
-				</svg>
+         <a href="/aidan" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
+         <a href="a/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+         <a href="a/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
       </div>
       <div class="headerIMG desktop">
            <img src="/images/header4.png" style="opacity: 100%;" width="100%" height="5%">
@@ -324,7 +312,7 @@
 <script>
   function redirectToChannel(channelName) {
     // Construct the URL based on the channelName and redirect to the page
-    const url = `t/${channelName}.html`;
+    const url = `A/${channelName}.html`;
     window.location.href = url;
   }
   
@@ -418,7 +406,7 @@
  
   function redirectToHomePage(homeTeamPng) {
       // Construct the URL based on the home team ID and redirect to the page
-      const url = `T/epl/${homeTeamPng}.html`;
+      const url = `A/epl/${homeTeamPng}.html`;
       window.location.href = url;
 }
 
