--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,8 +19,8 @@
       <div class="header">
          <img src="/images/phantomtvlogo.png" width="50" height="50">
          <a href="/tem" style="text-decoration:none;color: inherit;font-size: 16px;border: 5cm white;"><div class="home"> <bold>HOME</bold> </div></a>
-         <a href="t/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
-         <a href="t/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
+         <a href="T/highlights.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>HIGHLIGHTS</bold> </div></a>
+         <a href="T/livetv.html" style="text-decoration:none;color: inherit;font-size: 16px;"><div class="live-tv"> <bold>LIVE TV</bold> </div></a>
          <svg width="35" height="35" viewBox="0 0 200 200"  xmlns="http://www.w3.org/2000/svg" style="background:#0D7E80;border-radius:90%;justify-self:center;position:fixed;right:0;margin-right:20px;">
 				  <g id="Page-1" fill="none" fill-rule="evenodd">
 					<g id="Account-Holder" fill="#FCFDFF">
@@ -324,7 +324,7 @@
 <script>
   function redirectToChannel(channelName) {
     // Construct the URL based on the channelName and redirect to the page
-    const url = `t/${channelName}.html`;
+    const url = `T/${channelName}.html`;
     window.location.href = url;
   }
   
