--- a/public/mediaquery.css
+++ b/public/mediaquery.css
@@ -261,6 +261,11 @@
     flex-direction: row; /* Add this line */
     gap: 10px;
     width: 100%;
+    /* height:230px; */
+    position: relative; 
+    overflow-x: auto;
+    overflow-y:none;
+    -webkit-overflow-scrolling: touch;
     /* height:230px;
     position: relative; 
     overflow-x: auto;
